<?xml version="1.0"?>
<package format="2">
  <name>db3tomp4</name>
  <version>0.0.1</version>
  <description>The db3tomp4 package</description>
  
  <maintainer email="youremail@example.com">Your Name</maintainer>
  
  <license>Apache-2.0</license>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>OpenCV</depend>
  <depend>rosbag2_cpp</depend>
  <depend>rosbag2_storage</depend>


</package>
