<package format="2">
    <name>db3tomp4</name> <!-- 这个名字必须和 ros2 run 里的名字一致 -->
    <version>0.0.1</version>
    <description>Convert db3 bag to mp4</description>
  
    <maintainer email="your@email.com">Your Name</maintainer>
    <license>MIT</license>
  
    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>ament_cmake_auto</buildtool_depend>
    <depend>rclcpp</depend>
    <depend>sensor_msgs</depend>
    <depend>cv_bridge</depend>
    <depend>OpenCV</depend>
    <depend>rosbag2_cpp</depend>
    <depend>rosbag2_storage</depend>
  
    <export>
      <build_type>ament_cmake</build_type>
    </export>
  </package>
  